# K3-Benchstack

./: .gitmodules  README.md
K3/ansible/amplab/: q1.yml  q3.yml
engines/impala/: README.md
engines/naiad/benchmark/rust/: Cargo.toml
engines/naiad/benchmark/rust/examples/: tpch1.rs  tpch17.rs  tpch4.rs  tpch6.rs
engines/naiad/benchmark/rust/src/: main.rs
engines/oracle/: README.md
engines/spark/: README.md
hdfs/: README.md
hdfs/deploy/: hosts.ini
hdfs/docker/: Dockerfile  datanode_startup.sh  namenode_startup.sh
hdfs/schema/: create.sh  folders.txt  load.sh
launcher/: README.md  env.sh  launch.py  plot.py
launcher/docker/: Dockerfile  entrypoint.sh
launcher/sql/: create_tables.sql
launcher/src/: data.py  launch.py
mesos/: CMakeLists.txt  countLoop_input.yaml  k3_executor.cpp  k3_scheduler.cpp  q1_input.yaml  q2_input.yaml  q3_input.yaml  tpch1_input.yaml
oracle/docker-oracle/: index.html
plots/: plot.py
profiler/: README.md  collect_cadv.py  profile.sh
spark/deploy/: hosts.ini
storm/: README.md
utils/java-flight-recorder/: jfr_to_xml.sh  process_xml.py
vertica/docker-vertica/: README.md
workloads/: impala_driver.sh  impala_profile.sh  spark_driver.sh  vertica_driver.sh
workloads/flink/: .classpath  .project
workloads/spark/: NOTES.txt  amplabClasses.txt  classlist.txt  kmeansclass.txt  simple.sbt  tpchClasses.txt
workloads/spark_results/: AmplabQuery1_result  AmplabQuery2_result  AmplabQuery3_result  TPCHQuery1_result  TPCHQuery3_result  TPCHQuery5_result  TPCHQuery6_result
zookeeper/: Dockerfile  README.md  zoo.cfg
(+343 files in other folders)
